agrego redes sociales a el inicio

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
   </header>
 
 
-</main>
+ </main>
   <article>
-    <div id="carouselExample" class="carousel slide">
+    <div id="carouselExample"  class="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <video src="./videos/principal.mp4" autoplay class="d-block w-100" alt="...">
@@ -69,85 +69,33 @@
   </article>
 
 
+  <div class="grid-container">
+    <div class="grid-item">
+      <a href="https://www.instagram.com">
+        <img src="ruta/a/tu/imagen/instagram.png" alt="Instagram">
+      </a>
+    </div>
+    <div class="grid-item">
+      <a href="https://www.facebook.com">
+        <img src="ruta/a/tu/imagen/facebook.png" alt="Facebook">
+      </a>
+    </div>
+    <div class="grid-item">
+      <a href="https://www.tiktok.com">
+        <img src="ruta/a/tu/imagen/tiktok.png" alt="TikTok">
+      </a>
+    </div>
+    <div class="grid-item">
+      <a href="https://www.twitter.com">
+        <img src="ruta/a/tu/imagen/twitter.png" alt="Twitter">
+      </a>
+    </div>
+  </div>
+
+
   
 
-  <div>
-
-    <h2> NUESTROS PRODUCTOS DESTACADOS</h2>
-
-    <section class="conteiner-secciones">
-
-      <div class="categoria">
-
-        <div class="imagen-destacada">
-          <img src="./imagenes/alfombras.jpg" alt="alfombras">
-
-        </div>
-
-
-        <div class="tarjeta-body">
-
-          <h3> Alfombras</h3>
-
-          <a href="./pages/productos.html" class="boton">Comprar</a>
-
-        </div>
-
-      </div>
-
-
-      <div class="categoria">
-
-        <div class="imagen1">
-          <img src="./imagenes/manta.jpg" alt="mantas">
-        </div>
-
-
-        <div class="tarjeta-body">
-
-          <h3>Mantas</h3>
-
-          <a href="./pages/productos.html" class="boton">Comprar</a>
-
-        </div>
-
-
-      </div>
-
-
-      <div class="categoria">
-
-        <div class="imagen1">
-          <img src="./imagenes/jarrones.jpg" alt="">
-        </div>
-
-
-        <div class="tarjeta-body">
-
-          <h3> Jarrones </h3>
-
-          <a href="./pages/productos.html" class="boton">Comprar</a>
-        </div>
-
-      </div>
-
-
-
-    </section>
-
-
-    <h2>NOSOTROS</h2>
-
-    <section>
-
-      <div class="video-producto ">
-        <video src="./videos/pexels-curtis-adams-15887135-640x360-30fps.mp4" controls></video>
-
-
-      </div>
-
-    </section>
-
+</main>
     
 
     <footer>
@@ -172,7 +120,7 @@
         </ul>
       </div>
 
-      </main>
+     
 
 
 
