cambios en mis pages y index

--- a/pages/envios.html
+++ b/pages/envios.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="../css/style.css">
   <title>Document</title>
 </head>
@@ -14,9 +15,9 @@
 <body>
 
 
-  <header class="navbar navbar-expand-lg bg-body-tertiary">
+  <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container">
+      <div class="container-fluid">
         <nav class="navbar bg-body-tertiary">
           <div class="container">
             <a class="navbar-brand" href="#">
@@ -40,8 +41,6 @@
         </div>
       </div>
     </nav>
-  </header>
-
 
   </header>
 
@@ -71,35 +70,22 @@
       <section>
   </main>
 
-
-
-
-
-
   <footer>
-
-    <div class="footer-decojunco">
-
-      <div class="inicio-footer">
-
-        <ul>
-          <li><a href="./pages/envios.html">Envios</a></li>
-          <li> <a href="./pages/contacto.html">Contacto</a> </li>
-          <li><a href="./pages/productos.html">Productos</a></li>
-          <li> <a href="./pages/quienessomos.html">Quienes Somos</a></li>
-        </ul>
+    <div class="footer-content">
+      <div class="social-media">
+        <a  href="https://www.instagram.com/decojunco/">
+          <img src="../imagenes/instagram.png" alt="instagram">
+        </a>
+        <a  href="https://www.facebook.com/decojunco/">
+          <img src="../imagenes/facebook.png" alt="facebook">
+        </a>
       </div>
-
-        <ul>
-          <li> <a href="https://www.instagram.com/decojunco/?hl=es" target="_blank"> IG: DecoJunco</a>
-          <li>Pick Up Point: Av Juan b Justo 1515 Tigre, Buenos Aires</li>
-          <li>tiendadecojunco@gmail.com</li>
-
-        </ul>
-      </div>
-
-
+      <p class="copyright">
+        &copy; 2023 - Todos los derechos reservados
+      </p>
+    </div>
   </footer>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
