cambios envio/quienes somos

--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="../css/style.css">
   <title>Document</title>
 </head>
@@ -24,7 +24,8 @@
             </a>
           </div>
         </nav>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -34,50 +35,81 @@
             <a class="nav-link" href="../pages/quienes-somos.html">quienes somos</a>
             <a class="nav-link" href="../pages/contacto.html">contacto</a>
             <a class="nav-link" href="../pages/envios.html">envios</a>
-  
-            
+
+
           </div>
         </div>
       </div>
     </nav>
 
   </header>
-  
+
 
 
 
 
 
   <main>
+    <section>
+      <h2> Quienes Somos</h2>
+      <p class="formulario"> Permíteme presentarte quiénes somos en nuestro local de decoración. Somos una
+        tienda de decoración especializada en brindar soluciones creativas y elegantes para embellecer tus espacios.
+        Nuestro equipo está conformado por apasionados diseñadores y expertos en decoración que se dedican a seleccionar
+        cuidadosamente los productos más exclusivos y de alta calidad para ofrecerte una amplia gama de opciones.
+
+      </p>
+      <p class="formulario"> En nuestro local, nos enorgullece ofrecerte una variedad de artículos decorativos, desde
+        muebles y accesorios
+        hasta textiles y piezas de arte únicas. Buscamos capturar las últimas tendencias en decoración, así como también
+        ofrecer elementos clásicos que nunca pasan de moda.
+        Vatae. Ullam!</p>
+      <p class="formulario"> En nuestro establecimiento, nos consideramos más que una simple tienda de decoración. Somos
+        un equipo de profesionales apasionados por el diseño y la belleza estética, comprometidos en ofrecerte
+        soluciones que transformen tus espacios en ambientes excepcionales.
+
+        Contamos con un equipo de talentosos diseñadores de interiores y expertos en decoración, quienes están siempre
+        dispuestos a brindarte asesoramiento personalizado. Valoramos la importancia de comprender tus gustos,
+        preferencias y necesidades, para así poder recomendarte los productos y estilos que se ajusten perfectamente a
+        tu visión.</p>
+
+      <p class="formulario"> Nuestra selección de productos es cuidadosamente curada para ofrecerte lo mejor en términos
+        de calidad, estilo y originalidad. Trabajamos directamente con proveedores y artistas locales, así como también
+        con reconocidas marcas nacionales e internacionales, asegurando que cada artículo en nuestro local sea elegido
+        con esmero.
+
+        En nuestro amplio catálogo encontrarás una variedad de opciones para todos los rincones de tu hogar u oficina.
+        Desde mobiliario funcional y elegante, hasta accesorios decorativos, iluminación cautivadora, textiles de alta
+        calidad y piezas de arte únicas, estamos comprometidos en ofrecerte productos que destaquen por su estilo y
+        durabilidad.
+      </p>
+
+      <p class="formulario">
+        Además, nos esforzamos por mantenernos actualizados en las últimas tendencias de diseño de interiores.
+        Participamos en ferias y exposiciones especializadas, y constantemente investigamos nuevas ideas y conceptos
+        para ofrecerte propuestas frescas y emocionantes. 
+      </p>
+      <p class="formulario">
+        Nuestro objetivo es brindarte una experiencia de compra personalizada y asesoramiento experto para ayudarte a
+        transformar tus espacios en ambientes acogedores y llenos de estilo. Ya sea que estés buscando darle un toque
+        especial a tu hogar, tu oficina o cualquier otro lugar, estamos aquí para inspirarte y ofrecerte productos que
+        se adapten a tu gusto y presupuesto.
+
+        ¡Esperamos verte pronto en nuestro local de decoración y ayudarte a crear espacios que reflejen tu personalidad
+      </p>
     </section>
-    <h2> Quienes Somos</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat vero culpa iste laudantium!
-      Corrupti
-      explicabo assumenda distinctio doloremque voluptatem, vel sunt adipisci magnam autem, quisquam
-      expedita
-      iusto a laboriosam illo.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta optio nulla dicta nisi pariatur
-      culpa
-      quam
-      deserunt reiciendis dolores facilis deleniti aliquid exercitationem qui, ea officiis possimus?
-      Vatae. Ullam!</p>
-    <p>Loreoluptatibus,
-      bem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperiam non cumque ducimus sapiente.
-      Doloribus nemo distinctio aperiam obcaecati ut a, doloremque numquam corporis soluta libero animi
-      ipsa
-      aliquid esse!</p>
-    </section>
+
+
   </main>
 
- 
+
 
   <footer>
     <div class="footer-content">
       <div class="social-media">
-        <a  href="https://www.instagram.com/decojunco/">
+        <a href="https://www.instagram.com/decojunco/">
           <img src="../imagenes/instagram.png" alt="instagram">
         </a>
-        <a  href="https://www.facebook.com/decojunco/">
+        <a href="https://www.facebook.com/decojunco/">
           <img src="../imagenes/facebook.png" alt="facebook">
         </a>
       </div>
@@ -87,8 +119,8 @@
     </div>
   </footer>
 
- 
-  
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
