--- a/pages/envios.html
+++ b/pages/envios.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="../css/style.css">
   <title>Document</title>
 </head>
@@ -25,7 +25,8 @@
             </a>
           </div>
         </nav>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -35,8 +36,8 @@
             <a class="nav-link" href="../pages/quienes-somos.html">quienes somos</a>
             <a class="nav-link" href="../pages/contacto.html">contacto</a>
             <a class="nav-link" href="../pages/envios.html">envios</a>
-  
-            
+
+
           </div>
         </div>
       </div>
@@ -52,31 +53,62 @@
 
   <main>
     <section>
+      <h3>Envíos por SHIPNOW: Trabajan con sus propios vehículos y empresas como OCA, Flash, entre otras.</h3>
+      <p class="formulario">Retiros en Sucursal o envíos a domicilio:
 
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis a aliquam quos quae laborum
-        repudiandae,
-        inventore optio error nulla aspernatur adipisci id, voluptas assumenda atque! Exercitationem odio amet
-        quasi
-        excepturi. </p>
+        - De 2 a 7 días hábiles dependiendo de la zona y provincia. (CABA y GBA de 24 a 48hs hábiles una vez entregado
+        el pedido a ellos, el resto de Argentina de 4 a 7 días hábiles una vez entregado el pedido a ellos).
+        - Los días se cuentan a partir de que el pedido sea entregado a SHIPNOW, para que ellos realicen el envío a la
+        sucursal correspondiente o a tu domicilio.
+        - Los costos varían según la dirección de entrega, modalidad y productos agregados al carrito debido al volumen
+        y peso del mismo. </p>
 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, veritatis. Assumenda eum ipsam in soluta
-        quis
-        doloribus architecto quibusdam. Facere dolores quo velit ipsa impedit explicabo a fuga placeat ea?</p>
+      <h3> ENVIOS GRATIS A TODO EL PAIS EN COMPRAS MAYORES A: $20.000
+        Promoción envíos en Buenos Aires:</h3>
+      <p class="formulario">Tenes dos formas de averiguarlo, si es un solo producto, entrás al artículo de tu interés y
+        abajo de la foto del mismo colocas tu código postal y le das click al botón que dice "calcular" para poder ver
+        el costo de envío del mismo. Si son varios productos, tenés que agregar todo al carrito y en la parte del check
+        out te va a calcular el costo de acuerdo a tu dirección de entrega. Tené en cuenta las zonas de envío en Buenos
+        Aires, dependiendo de la zona, tenés un costo fijo de envío </p>
 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus enim illo perferendis exercitationem
-        facere
-        error beatae? Itaque quos quas aliquam in eveniet animi adipisci. Aperiam necessitatibus consectetur
-        adipisci itaque corrupti!</p>
-      <section>
+      <h3>Envíos por RAPPI, UBER, CABIFY, DIDI (CABA): </h3>
+      <p class="formulario">
+        *Este servicio puede estar limitado según tu zona*
+        - Te damos la opción de coordinar con nostros el envío por este medio. Podés encargarlo vos por medio de la
+        aplicación para que pasen a retirar por nuestro depósito.
+        - El costo varía según la distancia entre la zona de envío y la zona de destino.
+        - Tener en cuenta que en este medio de delivery están limitados los envíos por el volumen del producto.
+
+        ¿Cuál es el costo de mi envío al interior?
+
+        Tenes dos formas de averiguarlo, si es es un solo producto, entrás al artículo de tu interés y abajo de la foto
+        del mismo colocas tu código postal y le das click al botón que dice "calcular" para poder ver el costo de envío
+        del mismo. Si son varios productos, tenés que agregar todo al carrito y en la parte del check out te va a
+        calcular el costo de acuerdo a tu dirección de entrega. Puede ser envío a domicilio o retiro en sucursal.
+
+        ¿En que horario entegran las órdenes?
+
+        Las logísticas tienen un horario de entrega amplio de 14 a 22hs. Siempre recomendamos llenar bien los datos de
+        contacto para una buena y agil comunicación ante un retraso del pedido, cambio de domicilio y/o ausencia de
+        gente en el lugar de entrega.
+
+        </p>
+        <h4>Quiero contactarme
+
+          <p>Podés contactarnos a través de nuestro WhatsApp +54 9 11 2451-1619 
+            nuestro mail decojunco@gmail.com  </p> </h4>
+
+    </section>
+
   </main>
 
   <footer>
     <div class="footer-content">
       <div class="social-media">
-        <a  href="https://www.instagram.com/decojunco/">
+        <a href="https://www.instagram.com/decojunco/">
           <img src="../imagenes/instagram.png" alt="instagram">
         </a>
-        <a  href="https://www.facebook.com/decojunco/">
+        <a href="https://www.facebook.com/decojunco/">
           <img src="../imagenes/facebook.png" alt="facebook">
         </a>
       </div>
