cambios en el index

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
     <div id="carouselExample" class="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <video src="./videos/principal.mp4" autoplay class="d-block w-100" alt="...">
+          <video src="./videos/principal.mp4" autoplay class="d-block w-100" alt="video de decoracion">
         </div>
         <div class="carousel-item">
-          <video src="./videos/segundo carrusel.mp4" autoplay class="d-block w-100" alt="...">
+          <video src="./videos/segundo carrusel.mp4" autoplay class="d-block w-100" alt="video decoracion ">
         </div>
         <div class="carousel-item">
-          <video src="./videos/tercer carrusel.mp4" autoplay class="d-block w-100" alt="...">
+          <video src="./videos/tercer carrusel.mp4" autoplay class="d-block w-100" alt="video de decoracion">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
