--- a/pages/envios.html
+++ b/pages/envios.html
@@ -21,7 +21,7 @@
         <nav class="navbar bg-body-tertiary">
           <div class="container">
             <a class="navbar-brand" href="#">
-              <img src="../imagenes/logo.png" alt="" width="30" height="24">
+              <img src="../imagenes/logo.png" alt="logo de la imagen" width="30" height="24">
             </a>
           </div>
         </nav>
