agrego imagen de mapa

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -82,6 +82,18 @@
 
     </section>
 
+    <section>
+      <h1>Mi Negocio</h1>
+  <div class="container">
+    <div class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.7203871180447!2d-58.43416388476912!3d-34.61149686543934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a328c4a59deed1%3A0xa0ce373fb7ef2c07!2sAv.%20Juan%20B.%20Justo%201517%2C%20C1416CDJ%20CABA%2C%20Argentina!5e0!3m2!1sen!2sus!4v1625862343193!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+    <div class="address">
+      <p>Av. Juan B. Justo 1517</p>
+      <p>Ciudad Autónoma de Buenos Aires, Argentina</p>
+    </div>
+    </section>
+
   </main>
 
 
