--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <header nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container">
+    <div class="container-fluid">
       <nav class="navbar bg-body-tertiary">
         <div class="container">
           <a class="navbar-brand" href="#">
