agrego contenido a los p

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -62,8 +62,7 @@
             <img src="../imagenes/cocina.jpg" class="card-img-top" alt="cocinas">
             <div class="card-body">
               <h5 class="card-title">Cocina</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
+              <p class="card-text">Opta por utensilios de cocina de alta calidad y diseño atractivo..</p>
             </div>
           </div>
         </div>
@@ -72,8 +71,8 @@
             <img src="../imagenes/alfombras.jpg" class="card-img-top" alt="alfombras">
             <div class="card-body">
               <h5 class="card-title">Alfombras</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
+              <p class="card-text">Puedes elegir alfombras tejidas a mano, kilims o tapices con patrones y colores
+                vibrantes. Esto agregará textura, color y un toque bohemio a cualquier espacio</p>
             </div>
           </div>
         </div>
@@ -82,8 +81,7 @@
             <img src="../imagenes/jardin.jpg" class="card-img-top" alt="jardin">
             <div class="card-body">
               <h5 class="card-title">Jardin</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                content.</p>
+              <p class="card-text">Un camino o sendero bien diseñado puede añadir estructura y funcionalidad a tu jardín.</p>
             </div>
           </div>
         </div>
@@ -92,8 +90,7 @@
             <img src="../imagenes/manta.jpg" class="card-img-top" alt="mantas">
             <div class="card-body">
               <h5 class="card-title">Mantas</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
+              <p class="card-text">utiliza para este invierno nuestras mantas</p>
             </div>
           </div>
         </div>
