--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,9 +9,8 @@
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="../css/styles.css">
-  <title>Document</title>
+  <title>Contacto| encontranos en nuestras redes IG: DECOJUNCO </title>
 </head>
-
 
 
 
@@ -54,7 +53,7 @@
 
     </section>
 
-    <h2>Dejanos tu Mensaje</h2>
+    <h1>Dejanos tu Mensaje</h1>
 
     <div class="input-group mb-3">
 
