--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Nuestro productos de decoracion son fabricados localmente por nosotros mismo en todo el pais, en deco junco podes encontrar todo lo que necesitas para tu hogar">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="./css/style.css">
-  <title>Document</title>
+  <link rel="stylesheet" href="./css/styles.css">
+  <title> Productos de decoracion para tu hogar | Mayoristas y Minoristas envios a todo el pais| Av juan b justo 1517. Tigre </title>
 </head>
 
 
