--- a/pages/envios.html
+++ b/pages/envios.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=, initial-scale=1.0">
+  <meta name="description" content="Envios a todo el pais por Via cargo Y MdCargas">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="../css/styles.css">
-  <title>Document</title>
+  <title> Envios por todo Argentina | transportes de confianza</title>
 </head>
 
 <body>
@@ -47,7 +48,7 @@
 
 
 
-  <h2>INFORMACION SOBRE ENVIOS</h2>
+  <h1>INFORMACION SOBRE ENVIOS</h1>
 
 
 
