--- a/pages/productos.html
+++ b/pages/productos.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=, initial-scale=1.0">
+  <meta name="description" content="Encontra todo nuestros productos de decoracion para tu Hogar">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="../css/styles.css">
-  <title>Document</title>
+  <title> Nuestros Mejores productos para tu hogar | Decoracion de Ambientes y Hogar </title>
 </head>
 
 
@@ -50,7 +51,7 @@
   <main>
     <section>
 
-      <h2>Productos</h2>
+      <h1>Productos</h1>
 
 
 
