--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Conoce Nuestra Historia, te contamos como empezo nuestro amor por la decoracion de hogaress">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="../css/styles.css">
-  <title>Document</title>
+  <title> Quienes Somos| Te contantamos nuestra historia </title>
 </head>
 
 <body>
@@ -51,7 +52,7 @@
 
   <main>
     <section>
-      <h2> Quienes Somos</h2>
+      <h1> Quienes Somos</h1>
       <p class="formulario"> Permíteme presentarte quiénes somos en nuestro local de decoración. Somos una
         tienda de decoración especializada en brindar soluciones creativas y elegantes para embellecer tus espacios.
         Nuestro equipo está conformado por apasionados diseñadores y expertos en decoración que se dedican a seleccionar
